--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt-dns-config.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt-dns-config.yaml
@@ -26,7 +26,7 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
-            storageClassName: local-path
+            storageClassName: longhorn
             pvcSize: "10Gi"
             sourceURL: http://10.107.208.71/<< OS_NAME >>.img
             cpus: "1"
