--- a/pkg/cloudprovider/provider/kubevirt/testdata/http-image-source.yaml
+++ b/pkg/cloudprovider/provider/kubevirt/testdata/http-image-source.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
   labels:
     kubevirt.io/vm: http-image-source
+    cluster.x-k8s.io/cluster-name: test-namespace
+    cluster.x-k8s.io/role: worker
     md: md-name
   name: http-image-source
   namespace: test-namespace
@@ -28,6 +30,8 @@ spec:
       creationTimestamp: null
       labels:
         kubevirt.io/vm: http-image-source
+        cluster.x-k8s.io/cluster-name: test-namespace
+        cluster.x-k8s.io/role: worker
         md: md-name
     spec:
       affinity: {}
