--- a/test/e2e/provisioning/testdata/machinedeployment-aws-spot-instances.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws-spot-instances.yaml
@@ -29,7 +29,7 @@ spec:
             accessKeyId: << AWS_ACCESS_KEY_ID >>
             secretAccessKey: << AWS_SECRET_ACCESS_KEY >>
             region: "eu-central-1"
-            availabilityZone: "eu-central-1b"
+            availabilityZone: "eu-central-1a"
             vpcId: "vpc-819f62e9"
             instanceType: "t2.medium"
             instanceProfile: "kubernetes-v1"
