--- a/pkg/userdata/amzn2/testdata/kubelet-v1.24-aws.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.24-aws.yaml
@@ -104,7 +104,7 @@ write_files:
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
     cni_bin_dir=/opt/cni/bin
-    mkdir -p /etc/cni/net.d /etc/kubernetes/dynamic-config-dir /etc/kubernetes/manifests "$opt_bin" "$cni_bin_dir"
+    mkdir -p /etc/cni/net.d /etc/kubernetes/manifests "$opt_bin" "$cni_bin_dir"
     arch=${HOST_ARCH-}
     if [ -z "$arch" ]
     then
@@ -228,8 +228,6 @@ write_files:
       --lock-file=/tmp/kubelet.lock \
       --container-runtime=remote \
       --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
-      --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
-      --feature-gates=DynamicKubeletConfig=true \
       --node-ip ${KUBELET_NODE_IP}
 
     [Install]
