--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.24.9-nutanix.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.24.9-nutanix.yaml
@@ -112,7 +112,7 @@ write_files:
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
     cni_bin_dir=/opt/cni/bin
-    mkdir -p /etc/cni/net.d /etc/kubernetes/dynamic-config-dir /etc/kubernetes/manifests "$opt_bin" "$cni_bin_dir"
+    mkdir -p /etc/cni/net.d /etc/kubernetes/manifests "$opt_bin" "$cni_bin_dir"
     arch=${HOST_ARCH-}
     if [ -z "$arch" ]
     then
