--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-resource-pool.yaml
@@ -30,7 +30,7 @@ spec:
             datacenter: 'Hamburg'
             folder: '/Hamburg/vm/Kubermatic-ci'
             password: << VSPHERE_PASSWORD >>
-            datastoreCluster: 'dsc-1'
+            datastore: vsan
             resourcePool: 'e2e-resource-pool'
             cpus: 2
             MemoryMB: 2048
