Always use latest OSM image in e2e tests
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/examples/operating-system-manager.yaml
+++ b/examples/operating-system-manager.yaml
@@ -974,8 +974,7 @@ spec:
     spec:
       serviceAccountName: operating-system-manager-webhook
       containers:
-        # TODO: Update this to a semver tag before release.
-        - image: quay.io/kubermatic/operating-system-manager:8688a1fde001705f4c0b394ed2f4ff4a292b20a9
+        - image: quay.io/kubermatic/operating-system-manager:latest
           imagePullPolicy: IfNotPresent
           name: webhook
           command:
@@ -1303,8 +1302,7 @@ spec:
     spec:
       serviceAccountName: operating-system-manager
       containers:
-        # TODO: Update this to a semver tag before release.
-        - image: quay.io/kubermatic/operating-system-manager:8688a1fde001705f4c0b394ed2f4ff4a292b20a9
+        - image: quay.io/kubermatic/operating-system-manager:latest
           imagePullPolicy: IfNotPresent
           name: operating-system-manager
           command:
