--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -33,3 +33,4 @@ exceptions:
   - github.com/ajeddeloh/go-json # Since it's a fork, https://github.com/golang/go/blob/master/LICENSE
   - github.com/hashicorp/go-version # MPL-2.0
   - github.com/hashicorp/go-cleanhttp # MPL-2.0
+  - github.com/hashicorp/go-retryablehttp # MPL-2.0
