--- a/examples/opennebula-machinedeployment.yaml
+++ b/examples/opennebula-machinedeployment.yaml
@@ -49,7 +49,7 @@ spec:
             vcpu: 2
             memory: 1024
 
-            image: "Amazon Linux 2"
+            image: "flatcar-stable"
             datastore: "<< YOUR_DATASTORE_NAME >>"
             diskSize: 51200 # MB
 
@@ -60,8 +60,11 @@ spec:
             # if you want to have more control over e.g. placement of the VM you can do this:
             #vmTemplateExtra:
             #  SCHED_REQUIREMENTS: 'RACK="G4"'
-          operatingSystem: "amzn2"
+          operatingSystem: "flatcar"
           operatingSystemSpec:
             distUpgradeOnBoot: false
+
+            # use cloud-init for flatcar as ignition doesn't know anything about OpenNebula yet
+            provisioningUtility: "cloud-init"
       versions:
-        kubelet: 1.22.5
+        kubelet: 1.24.9
