--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere-static-ip.yaml
@@ -28,24 +28,24 @@ spec:
             username: '<< VSPHERE_USERNAME >>'
             vsphereURL: '<< VSPHERE_ADDRESS >>'
             datacenter: 'Hamburg'
-            folder: '/Hamburg/vm/Kubermatic-dev'
+            folder: '/Hamburg/vm/Kubermatic-ci'
             password: << VSPHERE_PASSWORD >>
             # example: 'https://your-vcenter:8443'. '/sdk' gets appended automatically
-            datastore: ceph-vm
-            allowInsecure: true
+            datastore: vsan
             cpus: 2
             MemoryMB: 2048
+            allowInsecure: true
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
             disableAutoUpdate: true
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
           network:
-           cidr: "192.168.44.<< IP_OCTET >>/20"
-           gateway: "192.168.32.1"
-           dns:
-             servers:
-              - "192.168.32.1"
-              - "8.8.8.8"
+            cidr: "192.168.44.<< IP_OCTET >>/20"
+            gateway: "192.168.32.1"
+            dns:
+              servers:
+                - "192.168.32.1"
+                - "8.8.8.8"
       versions:
         kubelet: "<< KUBERNETES_VERSION >>"
